--- a/Bakery/Bakery.csproj
+++ b/Bakery/Bakery.csproj
@@ -116,6 +116,7 @@
     <Compile Include="MVVM\Model\ShowCase.cs" />
     <Compile Include="MVVM\ViewModel\AddFoodConsistency.cs" />
     <Compile Include="MVVM\ViewModel\AddShowcaseFood.cs" />
+    <Compile Include="MVVM\ViewModel\AddShowcaseOrder.cs" />
     <Compile Include="MVVM\ViewModel\BaseViewModel.cs" />
     <Compile Include="MVVM\ViewModel\CheckFoodConsistency.cs" />
     <Compile Include="MVVM\ViewModel\CreateOrder.cs" />
@@ -133,6 +134,9 @@
     </Compile>
     <Compile Include="MVVM\View\AddShowcaseFood.xaml.cs">
       <DependentUpon>AddShowcaseFood.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\View\AddShowcaseOrder.xaml.cs">
+      <DependentUpon>AddShowcaseOrder.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\View\CheckFoodConsistency.xaml.cs">
       <DependentUpon>CheckFoodConsistency.xaml</DependentUpon>
@@ -226,6 +230,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MVVM\View\AddShowcaseFood.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\View\AddShowcaseOrder.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
